Fix horizontal scrollbars with width:auto
Close #767

--- a/src/static/jquery.timepicker.css
+++ b/src/static/jquery.timepicker.css
@@ -1,7 +1,7 @@
 .ui-timepicker-wrapper {
 	overflow-y: auto;
 	max-height: 150px;
-	width: 6.5em;
+	width: auto;
 	background: #fff;
 	border: 1px solid #ddd;
 	-webkit-box-shadow:0 5px 10px rgba(0,0,0,0.2);
@@ -12,13 +12,8 @@
 	margin: 0;
 }
 
-.ui-timepicker-wrapper.ui-timepicker-with-duration {
-	width: 13em;
-}
-
-.ui-timepicker-wrapper.ui-timepicker-with-duration.ui-timepicker-step-30,
-.ui-timepicker-wrapper.ui-timepicker-with-duration.ui-timepicker-step-60 {
-	width: 11em;
+.ui-timepicker-wrapper .ui-timepicker-list li {
+    padding-right: 20px;
 }
 
 .ui-timepicker-list {
